<resources>
    <string name="app_name">Smart Traveller</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyBwghm409l7AEhwftY796hCejSeqJgCLAY</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="book_now">Book Now</string>
    <string name="user_reviews">User Reviews</string>
    <string name="leave_a_review">Leave A Review</string>
    <string name="search_location">Search Location</string>
    <string name="need_rental_cars_bikes">Need Rental Cars/Bikes ?</string>
    <string name="need_budget_tours">Need Budget Tours ?</string>
    <string name="fillter">fillter</string>
    <string name="reset">reset</string>
    <string name="title_name">Title Name</string>
    <string name="location_name">Location Name</string>
    <string name="place_details">Place Details</string>
    <string name="create_event">Create Event</string>
    <string name="something_in_your_mind">Something in Your Mind</string>
    <string name="find">Find</string>
    <string name="book_room">Book Room</string>
    <string name="single_room">Single Room</string>
    <string name="double_room">Double Room</string>
    <string name="need_hotels">Need Hotels ?</string>
    <string name="where_do_you_want_to_plan_your_next_trip">Where Do You Want To Plan Your Next Trip?</string>
    <string name="sea">Sea</string>
    <string name="mountains">Mountains</string>
    <string name="plains">Plains</string>
    <string name="historical">Historical</string>
    <string name="lets_get_started">Lets Get Started.</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone">Your Phone</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="forget_password">Forget Password.</string>
    <string name="your_email">Your Email</string>
    <string name="recover_password">Recover Password</string>
    <string name="welcome_back">Welcome Back.</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="welcome_n_to_smart_traveller">Welcome\n To Smart Traveller</string>
    <string name="the_best_place_to_travel_and_try_new_things_let_s_n_get_started">The Best Place To Travel And Try New Things let\'s \n get started</string>
    <string name="skip">Skip</string>
    <string name="change_language_to_bangla">Change Language To Bangla</string>
    <string name="timeline">Timeline</string>
    <string name="places">Places</string>
    <string name="hotels">Hotels</string>
    <string name="rental_service">Rental Service</string>
    <string name="events">Events</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="nearby_me">NearBy Me</string>
    <string name="budget_calculator">Budget Calculator</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="information">Information</string>
    <string name="hotels_and_resorts">Hotels and Resorts</string>
    <string name="places_of_bangladesh">Places of Bangladesh</string>
    <string name="get_to_know_about">Get to know about</string>
    <string name="home">Home</string>
    <!--    //AIzaSyBS3SbqrLzvFV2wBO37r3olNrhYbT3Phng-->
    <string-array name="range">
        <item>৳1000</item>
        <item>৳2000</item>
        <item>৳3000</item>
        <item>৳4000</item>
        <item>৳5000</item>
        <item>৳6000</item>
        <item>৳7000</item>
        <item>৳8000</item>
        <item>৳9000</item>
        <item>৳10000</item>
    </string-array>

</resources>