<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FDF1E837"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="@dimen/_24ssp"
        android:gravity="center"
        android:layout_gravity="center|left"
        android:textColor="@color/primary_text_clr"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/sofia_pro_medium"
        android:layout_marginStart="@dimen/_16sdp"
        />
    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        app:boxStrokeColor="@color/primary_text_clr"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/primary_text_clr"
        app:startIconDrawable="@drawable/user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/your_email"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        app:boxStrokeColor="@color/primary_text_clr"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true"
        app:hintTextColor="@color/primary_text_clr"
        app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signinBtn"
            android:layout_width="match_parent"
            android:backgroundTint="@color/button_clr"
            android:text="@string/sign_in"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/sofia_pro_medium"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_height="@dimen/_45sdp"
            app:cornerRadius="@dimen/_16sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="5"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:background="@color/white"
                android:layout_height="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="OR"
                android:textSize="18sp"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:textStyle="bold"
                android:fontFamily="@font/sofia_pro_medium"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:background="@color/white"
                android:layout_height="2dp"/>

        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Text"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"

            android:layout_marginStart="@dimen/_16sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/text_clr"
                android:fontFamily="@font/sofia_pro_light"
                android:textSize="@dimen/_14ssp"/>
            <TextView
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/sign_up"
                android:textColor="@color/button_clr"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/sofia_pro_light"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/button_clr"
            android:fontFamily="@font/sofia_pro_light"
            android:textSize="@dimen/_14ssp"/>
    </LinearLayout>
</LinearLayout>