<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/need_budget_tours"
            android:textColor="#152046"
            android:fontFamily="@font/sofia_pro_medium"
            android:textSize="28sp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textAlignment="viewStart"
            android:lineSpacingExtra="8dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.appyvet.materialrangebar.RangeBar
            android:id="@+id/rangebar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:mrb_barWeight="2dp"
            app:mrb_connectingLineWeight="4dp"
            app:mrb_leftThumbColor="@color/purple_700"
            app:mrb_minThumbDistance="-1"
            app:mrb_pinColor="#6c3f6a"
            app:mrb_pinMaxFont="14sp"
            app:mrb_pinMinFont="12sp"
            app:mrb_pinRadius="12dp"
            app:mrb_pinTextColor="@color/white"
            app:mrb_rangeBar="true"
            app:mrb_rangeBarPaddingBottom="20dp"
            app:mrb_rangeBar_rounded="true"
            app:mrb_rightThumbColor="@color/purple_700"
            app:mrb_thumbBoundarySize="2dp"
            app:mrb_thumbSize="8dp"
            app:mrb_temporaryPins="true"
            app:mrb_tickDefaultColor="@color/green"
            app:mrb_tickDefaultLabel="label"
            app:mrb_tickEnd="10000"
            app:mrb_tickHeight="4dp"
            app:mrb_tickInterval="1000"
            app:mrb_tickTopLabels="@array/range"
            app:mrb_tickLabelSelectedColor="@color/purple_700"
            app:mrb_tickLabelSize="4sp"
            app:mrb_tickStart="1000"
            />

   <RelativeLayout
       android:layout_width="match_parent"

       android:layout_height="wrap_content">

       <com.google.android.material.button.MaterialButton
           android:id="@+id/filter"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end"
           android:layout_marginHorizontal="@dimen/_8sdp"
           android:layout_toStartOf="@id/reset"
           android:text="@string/fillter"
           android:textColor="@color/white" />

       <com.google.android.material.button.MaterialButton
           android:id="@+id/reset"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:layout_gravity="end"
           android:layout_marginHorizontal="@dimen/_8sdp"
           android:backgroundTint="@color/green"
           android:text="@string/reset"
           android:textColor="@color/white" />
   </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_4sdp"

            />


    </LinearLayout>





</FrameLayout>