<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:padding="10dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:id="@+id/timlineTbn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@drawable/travel"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/sofia_pro_medium"
                        android:text="@string/timeline"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:padding="10dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:id="@+id/placesBTN"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@drawable/place"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/sofia_pro_medium"
                        android:text="@string/places"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:padding="10dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:id="@+id/hotelLIst"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@drawable/city"
                        android:scaleType="centerCrop" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/sofia_pro_medium"
                        android:text="@string/hotels"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:padding="10dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:id="@+id/bikeList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/sofia_pro_medium"
                        android:text="@string/rental_service"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:padding="10dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:id="@+id/eventList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@drawable/backpack" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/sofia_pro_medium"
                        android:text="@string/events"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:padding="10dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:id="@+id/emergencyContact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@drawable/emergencycontact" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/sofia_pro_medium"
                        android:text="@string/emergency_contact"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/nearBy"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:padding="10dp"
                android:visibility="visible"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@drawable/nearby" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/sofia_pro_medium"
                        android:text="@string/nearby_me"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:padding="10dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:id="@+id/budgetCalc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@drawable/budget" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/sofia_pro_medium"
                        android:text="@string/budget_calculator"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:visibility="gone"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:padding="10dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:id="@+id/log_out"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/purple_700"
                        android:background="@drawable/logout" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/sofia_pro_medium"
                        android:text="Log Out"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>